--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ project(Lab2 VERSION 1.0)
 # Specify the C++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+set(CMAKE_CXX_FLAGS "-g")
 
 # Add source files
 file(GLOB SOURCES ${PROJECT_SOURCE_DIR}/main.cpp)
